# 2s3p-IMEX-RK-2D-BGK-solver

./: CMakeLists.txt  LICENSE  README.md  bgk_2d.cpp  euler_2d.cpp
